src/syntax/parser/snapshots/hebi__syntax__parser__tests__meta_methods-6.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
meta method `str` expects `self` and no other params
| fn [4;31m@str[0m(self, other): pass


