src/syntax/parser/snapshots/hebi__syntax__parser__tests__meta_methods-7.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
expected `identifier`
| fn @str(self, [4;31m*[0mother): pass


