src/syntax/parser/snapshots/hebi__syntax__parser__tests__meta_methods.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Class(
            Class {
                name: "T",
                parent: None,
                members: ClassMembers {
                    fields: [],
                    methods: [],
                    meta: [
                        (
                            Str,
                            Func {
                                name: "str",
                                params: Params {
                                    has_self: true,
                                    pos: [],
                                },
                                body: [
                                    Pass,
                                ],
                                has_yield: false,
                            },
                        ),
                        (
                            Add,
                            Func {
                                name: "add",
                                params: Params {
                                    has_self: true,
                                    pos: [
                                        (
                                            "other",
                                            None,
                                        ),
                                    ],
                                },
                                body: [
                                    Pass,
                                ],
                                has_yield: false,
                            },
                        ),
                    ],
                },
            },
        ),
    ],
}
