src/syntax/parser/snapshots/hebi__syntax__parser__tests__postfix_expr.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
GetField(
    GetField {
        target: GetIndex(
            GetIndex {
                target: GetField(
                    GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        name: "b",
                    },
                ),
                key: GetVar(
                    GetVar {
                        name: "c",
                    },
                ),
            },
        ),
        name: "d",
    },
)
