src/syntax/parser/snapshots/hebi__syntax__parser__tests__print_stmt-2.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31m"a"[0m


