src/syntax/parser/snapshots/hebi__syntax__parser__tests__print_stmt.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Print(
            Print {
                values: [
                    Literal(
                        String(
                            "a",
                        ),
                    ),
                    Literal(
                        Int(
                            0,
                        ),
                    ),
                    Literal(
                        Bool(
                            true,
                        ),
                    ),
                ],
            },
        ),
        Print(
            Print {
                values: [
                    Literal(
                        String(
                            "a",
                        ),
                    ),
                    Literal(
                        Int(
                            0,
                        ),
                    ),
                    Literal(
                        Bool(
                            true,
                        ),
                    ),
                ],
            },
        ),
    ],
}
