src/syntax/parser/snapshots/hebi__syntax__parser__tests__table_literal_expr.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            Literal(
                Table(
                    [
                        (
                            Literal(
                                String(
                                    "a",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "c",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: Ident(
                                        "d",
                                    ),
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "e",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: Ident(
                                        "f",
                                    ),
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                Table(
                    [
                        (
                            Literal(
                                String(
                                    "a",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "c",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: Ident(
                                        "d",
                                    ),
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "e",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: Ident(
                                        "f",
                                    ),
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                Table(
                    [
                        (
                            Literal(
                                String(
                                    "a",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "c",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: Ident(
                                        "d",
                                    ),
                                },
                            ),
                        ),
                        (
                            Literal(
                                String(
                                    "e",
                                ),
                            ),
                            GetVar(
                                GetVar {
                                    name: Ident(
                                        "f",
                                    ),
                                },
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ],
}
